--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "luxon": "^2.0.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "name": "changelog-generator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/vinicius-martins-bludata/changelog-generator.git",
   "author": " ",
   "license": "MIT",
