--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,5 @@ outputs:
   changelog:
     description: 'The changelog generated'
 runs:
-  using: node12
-  main: src/index.js
-#   using: docker
-#   image: Dockerfile
+  using: docker
+  image: Dockerfile
