--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "changelog-generator",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/vinicius-martins-bludata/changelog-generator.git",
+  "author": "Vinicius Martins <vinicius.martins@bludata.com.br>",
+  "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.5.0",
     "@actions/github": "^5.0.0",
@@ -8,11 +14,5 @@
   "scripts": {
     "start": "node src/index.js"
   },
-  "name": "changelog-generator",
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "repository": "https://github.com/vinicius-martins-bludata/changelog-generator.git",
-  "author": " ",
-  "license": "MIT",
   "type": "module"
 }
