--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "luxon": "^2.0.2"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "type": "module"
 }
