--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v2
       
-#       - name: Install dependencies
-#         run: yarn install
+      - name: Install dependencies
+        run: yarn install
       
       - name: Generate changelog
         uses: ./
