--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
 #       - name: Use Node.js ${{ matrix.node-version }}
 #         uses: actions/setup-node@v2
       
-      - name: Install dependencies
-        run: yarn install
+      # - name: Install dependencies
+      #   run: yarn install
       
       - name: Generate changelog
         uses: ./
