--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "changelog-generator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/vinicius-martins-bludata/changelog-generator.git",
   "author": "Vinicius Martins <vinicius.martins@bludata.com.br>",
   "license": "MIT",
